--- a/exercise3/mypage.html
+++ b/exercise3/mypage.html
@@ -80,20 +80,19 @@ INFORMATION
 
 <h1>CREEP</h1>
 
-<p id="Q1">WHAT DO YOU USUALLY DO WHEN YOU'RE HOME ALONE?</p>
-<button type="button" onclick="document.getElementById('Q1').innerHTML = 'CRY'">Click Me!</button>
+<h id="Q1">WHAT DO YOU USUALLY DO WHEN YOU'RE HOME ALONE?</h>
+<button type="button" onclick="document.getElementById('Q1').innerHTML = 'CRY'">WANT AN ANSWER? CLICK HERE</button>
+<h id="Q2">WHY CAN'T YOU BE LIKE YOUR SISTER?</h>
+<button type="button" onclick="document.getElementById('Q2').innerHTML = 'JUST LUCKY I GUESS'">CLICKING THIS IS A MUST</button>
 
-<p id="Q2">WHO IS YOUR FAVOURITE ARTIST?</p>
-<button type="button" onclick="document.getElementById('Q2').innerHTML = 'NASTY NECKFACE'">Click Me!</button>
+<h id="Q3">WHY ARE YOU SO QUIET?</h>
+<button type="button" onclick="document.getElementById('Q3').innerHTML = 'I AM STUDYING TO BE A MIME'">CLICKBAIT</button>
 
-<p id="Q3">WHAT KIND OF MUSIC DO YOU LIKE?</p>
-<button type="button" onclick="document.getElementById('Q3').innerHTML = 'INDIE'">Click Me!</button>
+<h id="Q4">DO YOU HATE PEOPLE?</h>
+<button type="button" onclick="document.getElementById('Q4').innerHTML = 'ONLY PEOPLE WHO ASK ME THAT QUESTION'">CAN'T THINK OF ANYTHING ELSE TO PUT IN THIS BUTTON</button>
 
-<p id="Q4">WHAT TV SERIES DO YOU LIKE?</p>
-<button type="button" onclick="document.getElementById('Q4').innerHTML = 'F.R.I.E.N.D.S'">Click Me!</button>
-
-<p id="Q5">WHAT DO YOU DO WHEN YOU'RE ALONE AT NIGHT</p>
-<button type="button" onclick="document.getElementById('Q5').innerHTML = 'CRY'">Click Me!</button>
+<h id="Q5">BEST TRAIT</h>
+<button type="button" onclick="document.getElementById('Q5').innerHTML = 'SARCASM'">JUST CLICK THIS</button>
 
 </body>
 </html>
