--- a/exercise3/mypage.html
+++ b/exercise3/mypage.html
@@ -46,6 +46,9 @@ button:hover {
     color: red;
 	
 }
+audio{
+	display:none;
+}
 </style>
 </head>
 
@@ -93,6 +96,11 @@ INFORMATION
 
 <h id="Q5">BEST TRAIT</h>
 <button type="button" onclick="document.getElementById('Q5').innerHTML = 'SARCASM'">JUST CLICK THIS</button>
+
+<audio controls autoplay>
+  
+  <source src="Go Cozy - Glimmer - 02 Fruit Flies.mp3" type="audio/mpeg">
+</audio>
 
 </body>
 </html>
